添加：添加post请求

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,6 +32,11 @@
 	    android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 	    android:text="删除音频"/>
+	<Button 
+	    android:id="@+id/record_upload_button"
+	    android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+	    android:text="上传音频"/>
 	<TextView 
 	    android:text="现在的状态："
 	    android:layout_width="wrap_content"
